fix button on ios

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,6 +11,7 @@ body {
 
 input {
   font-size: 16px;
+  -webkit-appearance: none;
 }
 
 .app {
